--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -35,7 +35,7 @@
                     android:layout_marginRight="7dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Dhaka"
+                    android:text="Vadavalli"
                     android:textStyle="bold"
                     android:textAllCaps="false"
                     android:textSize="32sp"
@@ -66,7 +66,7 @@
                     android:layout_marginLeft="7dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Barisal"
+                    android:text="Ettimadai"
                     android:textStyle="bold"
                     android:textAllCaps="false"
                     android:textSize="32sp"
